--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,10 +27,10 @@
 
         <nav class="nav">
             <ul>
-                <li><a href="" class="red">Inicio</a></li>
-                <li><a href="pages/Productos.html" class="violet">Productos</a></li>
-                <li><a href="pages/nosotros.html" class="green">Nosotros</a></li>
-                <li><a href="pages/contact.html" class="orange">Contacto</a></li>
+                <li><a href="../index.html" class="red">Inicio</a></li>
+                <li><a href="Productos.html" class="violet">Productos</a></li>
+                <li><a href="nosotros.html" class="green">Nosotros</a></li>
+                <li><a href="contact.html" class="orange">Contacto</a></li>
             </ul>
         </nav>
         <div class="redes">
