--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -30,9 +30,9 @@
         <nav class="nav">
             <ul>
                 <li><a href="../index.html" class="red">Inicio</a></li>
-                <li><a href="" class="violet">Productos</a></li>
-                <li><a href="" class="green">Nosotros</a></li>
-                <li><a href="" class="orange">Contacto</a></li>
+                <li><a href="Productos.html" class="violet">Productos</a></li>
+                <li><a href="nosotros.html" class="green">Nosotros</a></li>
+                <li><a href="contact.html" class="orange">Contacto</a></li>
             </ul>
         </nav>
         <div class="redes">
