--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <nav class="nav">
                 <ul>
-                    <li><a href="" class="red">Inicio</a></li>
+                    <li><a href="index.html" class="red">Inicio</a></li>
                     <li><a href="pages/Productos.html" class="violet">Productos</a></li>
                     <li><a href="pages/nosotros.html" class="green">Nosotros</a></li>
                     <li><a href="pages/contact.html" class="orange">Contacto</a></li>
