--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
 
         <article class="article article1">
             <div class="cont">
-                <a href="#">Productos</a>
+                <a href="pages/Productos.html">Productos</a>
                 <p>Mira nuestros Productos!!</p>
             </div>
         </article>
         <article class="article article2">
             <div class="cont">
-                <a href="#">Nosotros</a>
+                <a href="pages/nosotros.html">Nosotros</a>
                 <p>Sobre nosotros</p>
             </div>
         </article>
         <article class="article article3">
             <div class="cont">
-                <a href="#">Contacto</a>
+                <a href="pages/contact.html">Contacto</a>
                 <p>Contactanos</p>
             </div>
         </article>
