--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <i class="fa-brands fa-whatsapp botonWsp"></i>
+   <a href=""> <i class="fa-brands fa-whatsapp botonWsp"></i></a>
     <div class="containerProductos">
         <header class="header">
             <h1>
@@ -45,40 +45,40 @@
 
         <section class="sectionProductos">
   <article class="articleProductos">
-    <img class="imgArticle" src="../img/banner.jpg" alt="Gomitas">
+    <img class="imgArticle" src="../img/100gr.jpg" alt="Gomitas">
     <h3>100 Gramos</h3>
     <p>$700</p>
-    <a class="button" href="">Comprar</a>
+    <a class="button" href="https://wa.me/+542616394540?text=Hola,%20quisiera comprar 100 o mas gr.." target="_blank">Comprar</a>
   </article>
   <article class="articleProductos">
-    <img class="imgArticle" src="../img/banner.jpg" alt="Gomitas">
+    <img class="imgArticle" src="../img/bandeja.jpg" alt="Gomitas">
     <h3>Bandeja Personalizada</h3>
     <p>$3000</p>
-    <a class="button" href="">Comprar</a>
+    <a class="button" href="https://wa.me/+542616394540?text=Hola,%20quisiera comprar la bandeja Personalizada..." target="_blank">Comprar</a>
   </article>
   <article class="articleProductos">
-    <img class="imgArticle" src="../img/banner.jpg" alt="Gomitas">
+    <img class="imgArticle" src="../img/botella.jpg" alt="Gomitas">
     <h3>Botella Gomitas Mixtas</h3>
     <p>$1700</p>
-    <a class="button" href="">Comprar</a>
+    <a class="button" href="https://wa.me/+542616394540?text=Hola,%20quisiera comprar la botella con gomitas mixtas..." target="_blank">Comprar</a>
   </article>
   <article class="articleProductos">
-    <img class="imgArticle" src="../img/banner.jpg" alt="Gomitas">
+    <img class="imgArticle" src="../img/pote.jpg" alt="Gomitas">
     <h3>Pote Gomitas mixtas</h3>
     <p>$500</p>
-    <a class="button" href="">Comprar</a>
+    <a class="button" href="https://wa.me/+542616394540?text=Hola,%20quisiera comprar el pote con gomitas mixtas..." target="_blank">Comprar</a>
   </article>
   <article class="articleProductos">
-    <img class="imgArticle" src="../img/banner.jpg" alt="Gomitas">
+    <img class="imgArticle" src="../img/bolsita.jpg" alt="Gomitas">
     <h3>Bolsita Gomitas Mixtas</h3>
     <p>$350</p>
-    <a class="button" href="">Comprar</a>
+    <a class="button" href="https://wa.me/+542616394540?text=Hola,%20quisiera comprar la bolsita con gomitas mixtas..." target="_blank">Comprar</a>
   </article>
   <article class="articleProductos">
-    <img class="imgArticle" src="../img/banner.jpg" alt="Gomitas">
+    <img class="imgArticle" src="../img/stitch.jpg" alt="Gomitas">
     <h3>Stitch</h3>
     <p>$3500</p>
-    <a class="button" href="">Comprar</a>
+    <a class="button" href="https://wa.me/+542616394540?text=Hola,%20quisiera comprar un stitch.." target="_blank">Comprar</a>
   </article>
 
         </section>
