--- a/pages/contact.html
+++ b/pages/contact.html
@@ -46,7 +46,7 @@
             <h3>Contactanos</h3>
             <input type="text" name="Nombre" class="inputForm" placeholder="Nombre...">
             <input type="text" name="Apellido" class="inputForm" placeholder="Apellido...">
-            <input type="number" name="Numero" class="inputForm" placeholder="Deje su numero..">
+            <input type="number" name="Numero" class="inputForm" placeholder="Telefono..">
             <textarea name="Texto" id="" cols="30" rows="10" placeholder="Deje su Mensaje..."
                 class="inputForm text"></textarea>
             <button type="submit" class="enviar">Enviar</button>
