--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contacto</title>
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/4b1368394c.js" crossorigin="anonymous"></script>
-
+    <link rel="shortcut icon" href="../img/logo.jpg" type="image/x-icon">
 </head>
 
 <body>
+    <a href="https://wa.me/+542616394540?text=Hola Candymania..Queria preguntar algo"><i class="fa-brands fa-whatsapp botonWsp"></i></a>
     <haeder class="header">
         <h1>
             <span class="red">C</span>
@@ -34,15 +35,15 @@
             </ul>
         </nav>
         <div class="redes">
-            <a href=""><i class="fa-brands fa-instagram icon red"></i></a>
+            <a href="https://www.instagram.com/candymania.mza/"><i class="fa-brands fa-instagram icon red"></i></a>
             <a href=""><i class="fa-brands fa-whatsapp icon green"></i></a>
-            <a href=""><i class="fa-brands fa-twitter icon orange"></i></a>
+            <!-- <a href=""><i class="fa-brands fa-twitter icon orange"></i></a> -->
         </div>
 
 
     </haeder>
     <div class="formulario">
-        <form  action="https://formspree.io/f/xrgwgjbz" method="POST" target="_blank">
+        <form action="https://formspree.io/f/xrgwgjbz" method="POST" target="_blank">
             <h3>Contactanos</h3>
             <input type="text" name="Nombre" class="inputForm" placeholder="Nombre...">
             <input type="text" name="Apellido" class="inputForm" placeholder="Apellido...">
@@ -75,9 +76,8 @@
             </ul>
         </nav>
         <div class="redes">
-            <i class="fa-brands fa-instagram icon red"></i>
-            <i class="fa-brands fa-whatsapp icon green"></i>
-            <i class="fa-brands fa-twitter icon orange"></i>
+            <a href="https://www.instagram.com/candymania.mza/"><i class="fa-brands fa-instagram icon red"></i></a>
+            <a href="https://wa.me/+542616394540?text=Hola Candymania..Queria preguntar algo"><i class="fa-brands fa-whatsapp icon green"></i></a>
         </div>
         <p class="pink">Diseñado por Paulo Guidolin.</p>
     </footer>
