--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Inicio</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/4b1368394c.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="img/logo.jpg" type="image/x-icon">
 
 </head>
 
 <body>
-    <i class="fa-brands fa-whatsapp botonWsp"></i>
+   <a href="https://wa.me/+542616394540?text=Hola Candymania..Queria preguntar algo"><i class="fa-brands fa-whatsapp botonWsp"></i></a> 
     <div class="container">
         <haeder class="header">
             <h1>
@@ -36,9 +37,9 @@
                 </ul>
             </nav>
             <div class="redes">
-                <a href=""><i class="fa-brands fa-instagram icon red"></i></a>
-                <a href=""><i class="fa-brands fa-whatsapp icon green"></i></a>
-                <a href=""><i class="fa-brands fa-twitter icon orange"></i></a>
+                <a href="https://www.instagram.com/candymania.mza/"><i class="fa-brands fa-instagram icon red"></i></a>
+                <a href="https://wa.me/+542616394540?text=Hola Candymania..Queria preguntar algo"><i class="fa-brands fa-whatsapp icon green"></i></a>
+                <!-- <a href=""><i class="fa-brands fa-twitter icon orange"></i></a> -->
             </div>
 
 
@@ -95,9 +96,9 @@
                 </ul>
             </nav>
             <div class="redes">
-                <i class="fa-brands fa-instagram icon red"></i>
-                <i class="fa-brands fa-whatsapp icon green"></i>
-                <i class="fa-brands fa-twitter icon orange"></i>
+                <a href="https://www.instagram.com/candymania.mza/"><i class="fa-brands fa-instagram icon red"></i></a>
+                <a href="https://wa.me/+542616394540?text=Hola Candymania..Queria preguntar algo"><i class="fa-brands fa-whatsapp icon green"></i></a>
+                <!-- <i class="fa-brands fa-twitter icon orange"></i> -->
             </div>
             <p class="pink">Diseñado por Paulo Guidolin.</p>
         </footer>
