--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Productos</title>
     <script src="https://kit.fontawesome.com/4b1368394c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../img/logo.jpg" type="image/x-icon">
 </head>
 
 <body>
-   <a href=""> <i class="fa-brands fa-whatsapp botonWsp"></i></a>
+    <a href="https://wa.me/+542616394540?text=Hola Candymania..Queria preguntar algo"> <i class="fa-brands fa-whatsapp botonWsp"></i></a>
     <div class="containerProductos">
         <header class="header">
             <h1>
@@ -35,51 +36,61 @@
                 </ul>
             </nav>
             <div class="redes">
-                <a href=""><i class="fa-brands fa-instagram icon red"></i></a>
-                <a href=""><i class="fa-brands fa-whatsapp icon green"></i></a>
-                <a href=""><i class="fa-brands fa-twitter icon orange"></i></a>
+                <a href="https://www.instagram.com/candymania.mza/"><i class="fa-brands fa-instagram icon red"></i></a>
+                <a href="https://wa.me/+542616394540?text=Hola Candymania..Queria preguntar algo"><i class="fa-brands fa-whatsapp icon green"></i></a>
+                <!-- <a href=""><i class="fa-brands fa-twitter icon orange"></i></a> -->
             </div>
 
 
         </header>
 
         <section class="sectionProductos">
-  <article class="articleProductos">
-    <img class="imgArticle" src="../img/100gr.jpg" alt="Gomitas">
-    <h3>100 Gramos</h3>
-    <p>$700</p>
-    <a class="button" href="https://wa.me/+542616394540?text=Hola,%20quisiera comprar 100 o mas gr.." target="_blank">Comprar</a>
-  </article>
-  <article class="articleProductos">
-    <img class="imgArticle" src="../img/bandeja.jpg" alt="Gomitas">
-    <h3>Bandeja Personalizada</h3>
-    <p>$3000</p>
-    <a class="button" href="https://wa.me/+542616394540?text=Hola,%20quisiera comprar la bandeja Personalizada..." target="_blank">Comprar</a>
-  </article>
-  <article class="articleProductos">
-    <img class="imgArticle" src="../img/botella.jpg" alt="Gomitas">
-    <h3>Botella Gomitas Mixtas</h3>
-    <p>$1700</p>
-    <a class="button" href="https://wa.me/+542616394540?text=Hola,%20quisiera comprar la botella con gomitas mixtas..." target="_blank">Comprar</a>
-  </article>
-  <article class="articleProductos">
-    <img class="imgArticle" src="../img/pote.jpg" alt="Gomitas">
-    <h3>Pote Gomitas mixtas</h3>
-    <p>$500</p>
-    <a class="button" href="https://wa.me/+542616394540?text=Hola,%20quisiera comprar el pote con gomitas mixtas..." target="_blank">Comprar</a>
-  </article>
-  <article class="articleProductos">
-    <img class="imgArticle" src="../img/bolsita.jpg" alt="Gomitas">
-    <h3>Bolsita Gomitas Mixtas</h3>
-    <p>$350</p>
-    <a class="button" href="https://wa.me/+542616394540?text=Hola,%20quisiera comprar la bolsita con gomitas mixtas..." target="_blank">Comprar</a>
-  </article>
-  <article class="articleProductos">
-    <img class="imgArticle" src="../img/stitch.jpg" alt="Gomitas">
-    <h3>Stitch</h3>
-    <p>$3500</p>
-    <a class="button" href="https://wa.me/+542616394540?text=Hola,%20quisiera comprar un stitch.." target="_blank">Comprar</a>
-  </article>
+            <article class="articleProductos">
+                <img class="imgArticle" src="../img/100gr.jpg" alt="Gomitas">
+                <h3>100 Gramos</h3>
+                <p>$700</p>
+                <a class="button" href="https://wa.me/+542616394540?text=Hola,%20quisiera comprar 100 o mas gr.."
+                    target="_blank">Comprar</a>
+            </article>
+            <article class="articleProductos">
+                <img class="imgArticle" src="../img/bandeja.jpg" alt="Gomitas">
+                <h3>Bandeja Personalizada</h3>
+                <p>$3000</p>
+                <a class="button"
+                    href="https://wa.me/+542616394540?text=Hola,%20quisiera comprar la bandeja Personalizada..."
+                    target="_blank">Comprar</a>
+            </article>
+            <article class="articleProductos">
+                <img class="imgArticle" src="../img/botella.jpg" alt="Gomitas">
+                <h3>Botella Gomitas Mixtas</h3>
+                <p>$1700</p>
+                <a class="button"
+                    href="https://wa.me/+542616394540?text=Hola,%20quisiera comprar la botella con gomitas mixtas..."
+                    target="_blank">Comprar</a>
+            </article>
+            <article class="articleProductos">
+                <img class="imgArticle" src="../img/pote.jpg" alt="Gomitas">
+                <h3>Pote Gomitas mixtas</h3>
+                <p>$500</p>
+                <a class="button"
+                    href="https://wa.me/+542616394540?text=Hola,%20quisiera comprar el pote con gomitas mixtas..."
+                    target="_blank">Comprar</a>
+            </article>
+            <article class="articleProductos">
+                <img class="imgArticle" src="../img/bolsita.jpg" alt="Gomitas">
+                <h3>Bolsita Gomitas Mixtas</h3>
+                <p>$350</p>
+                <a class="button"
+                    href="https://wa.me/+542616394540?text=Hola,%20quisiera comprar la bolsita con gomitas mixtas..."
+                    target="_blank">Comprar</a>
+            </article>
+            <article class="articleProductos">
+                <img class="imgArticle" src="../img/stitch.jpg" alt="Gomitas">
+                <h3>Stitch</h3>
+                <p>$3500</p>
+                <a class="button" href="https://wa.me/+542616394540?text=Hola,%20quisiera comprar un stitch.."
+                    target="_blank">Comprar</a>
+            </article>
 
         </section>
 
@@ -108,9 +119,10 @@
                 </ul>
             </nav>
             <div class="redes">
-                <i class="fa-brands fa-instagram icon red"></i>
-                <i class="fa-brands fa-whatsapp icon green"></i>
-                <i class="fa-brands fa-twitter icon orange"></i>
+                <a href="https://www.instagram.com/candymania.mza/"><i class="fa-brands fa-instagram icon red"></i></a>
+                <a href="https://wa.me/+542616394540?text=Hola Candymania..Queria preguntar algo"><i
+                        class="fa-brands fa-whatsapp icon green"></i></a>
+
             </div>
             <p class="pink">Diseñado por Paulo Guidolin.</p>
         </footer>
