--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -8,7 +8,15 @@
     <script src="https://kit.fontawesome.com/4b1368394c.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../img/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S4J23Y513S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-S4J23Y513S');
+</script>
 </head>
 
 <body >
