--- a/index.html
+++ b/index.html
@@ -2,25 +2,27 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S4J23Y513S"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-S4J23Y513S');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/4b1368394c.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="img/logo.jpg" type="image/x-icon">
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-S4J23Y513S"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-S4J23Y513S');
-</script>
 </head>
 
 <body>
-   <a href="https://wa.me/+542616394540?text=Hola Candymania..Queria preguntar algo"><i class="fa-brands fa-whatsapp botonWsp"></i></a> 
+    <a href="https://wa.me/+542616394540?text=Hola Candymania..Queria preguntar algo"><i
+            class="fa-brands fa-whatsapp botonWsp"></i></a>
     <div class="container">
         <haeder class="header">
             <h1>
@@ -46,21 +48,22 @@
             </nav>
             <div class="redes">
                 <a href="https://www.instagram.com/candymania.mza/"><i class="fa-brands fa-instagram icon red"></i></a>
-                <a href="https://wa.me/+542616394540?text=Hola Candymania..Queria preguntar algo"><i class="fa-brands fa-whatsapp icon green"></i></a>
+                <a href="https://wa.me/+542616394540?text=Hola Candymania..Queria preguntar algo"><i
+                        class="fa-brands fa-whatsapp icon green"></i></a>
                 <!-- <a href=""><i class="fa-brands fa-twitter icon orange"></i></a> -->
             </div>
 
 
         </haeder>
 
-        
+
         <div class="banner">
             <div class="eslogan">
                 <h2>Endulza tus momentos</h2>
             </div>
 
         </div>
-   
+
 
         <article class="article article1">
             <div class="cont">
@@ -105,7 +108,8 @@
             </nav>
             <div class="redes">
                 <a href="https://www.instagram.com/candymania.mza/"><i class="fa-brands fa-instagram icon red"></i></a>
-                <a href="https://wa.me/+542616394540?text=Hola Candymania..Queria preguntar algo"><i class="fa-brands fa-whatsapp icon green"></i></a>
+                <a href="https://wa.me/+542616394540?text=Hola Candymania..Queria preguntar algo"><i
+                        class="fa-brands fa-whatsapp icon green"></i></a>
                 <!-- <i class="fa-brands fa-twitter icon orange"></i> -->
             </div>
             <p class="pink">Diseñado por Paulo Guidolin.</p>
