--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,25 +2,27 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S4J23Y513S"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-S4J23Y513S');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/4b1368394c.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../img/logo.jpg" type="image/x-icon">
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-S4J23Y513S"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-S4J23Y513S');
-</script>
 </head>
 
 <body>
-    <a href="https://wa.me/+542616394540?text=Hola Candymania..Queria preguntar algo"><i class="fa-brands fa-whatsapp botonWsp"></i></a>
+    <a href="https://wa.me/+542616394540?text=Hola Candymania..Queria preguntar algo"><i
+            class="fa-brands fa-whatsapp botonWsp"></i></a>
     <haeder class="header">
         <h1>
             <span class="red">C</span>
@@ -86,7 +88,8 @@
         </nav>
         <div class="redes">
             <a href="https://www.instagram.com/candymania.mza/"><i class="fa-brands fa-instagram icon red"></i></a>
-            <a href="https://wa.me/+542616394540?text=Hola Candymania..Queria preguntar algo"><i class="fa-brands fa-whatsapp icon green"></i></a>
+            <a href="https://wa.me/+542616394540?text=Hola Candymania..Queria preguntar algo"><i
+                    class="fa-brands fa-whatsapp icon green"></i></a>
         </div>
         <p class="pink">Diseñado por Paulo Guidolin.</p>
     </footer>
