--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         gtag('config', 'G-S4J23Y513S');
     </script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1714054981129127"
-    crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
@@ -85,6 +85,8 @@
                 <p>Contactanos</p>
             </div>
         </article>
+
+        <aside></aside>
 
         <footer>
             <h3>
